--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,12 +6,15 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'com.google.gms.google-services'
 
+apply plugin: 'kotlin-kapt'
+
+
 android {
-    compileSdkVersion 29
+    compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.cse438_final_project"
         minSdkVersion 16
-        targetSdkVersion 29
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -40,6 +43,46 @@ dependencies {
 
 
     implementation 'androidx.multidex:multidex:2.0.1'
+
+    //kotlinx coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
+
+    //retrofit for REST
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+
+    //Moshi for type conversion
+    implementation 'com.squareup.retrofit2:converter-moshi:2.6.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    //dependency for viewModel
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0-beta01"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+
+    // Room components
+    implementation "androidx.room:room-runtime:$rootProject.roomVersion"
+    annotationProcessor "androidx.room:room-compiler:$rootProject.roomVersion"
+    androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
+    kapt 'android.arch.persistence.room:compiler:1.1.1'
+
+    // Room components
+    implementation "androidx.room:room-runtime:$rootProject.roomVersion"
+    kapt "androidx.room:room-compiler:$rootProject.roomVersion"
+    androidTestImplementation "androidx.room:room-testing:$rootProject.roomVersion"
+    kapt 'android.arch.persistence.room:compiler:1.1.1'
+
+    // Lifecycle components
+    implementation "androidx.lifecycle:lifecycle-extensions:$rootProject.archLifecycleVersion"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$rootProject.archLifecycleVersion"
+
+    //dependency for viewModel coroutine
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0-beta01"
+
+    // UI
+    implementation "com.google.android.material:material:$rootProject.materialVersion"
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    implementation 'com.android.support:recyclerview-v7:28.0.0-rc01'
 
 
     testImplementation 'junit:junit:4.12'
