--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
         </activity>
         <activity android:name="com.example.cse438_final_project.Activity.Standings2019Activity">
         </activity>
+        <activity android:name="com.example.cse438_final_project.Activity.NewsActivity">
+        </activity>
+
     </application>
 
 </manifest>
